# web

./: .gitignore  AGENTS.md  AGENTS.sync-conflict-20251224-093958-ELJN4XP.md  CNAME  Cargo.toml  LICENSE.md  Makefile.toml  README.md  build.fish  config.toml  feed.xml  hugo.toml  index.html  index.xml  robots.txt  sitemap.xml  test_cli_commands.sh  theme.toml
.github/workflows/: deploy.yml  integration-test.yml  publish-freenet.yml
about/: index.html
about/community/: index.html
about/philosophy/: index.html
api/src/: handle_sign_cert.rs  main.rs  routes.rs
blog/: index.html
blog/1030-weekly-developer-meeting-summary/: index.html
blog/1035-weekly-developer-meeting-summary/: index.html
blog/1048-weekly-developer-meeting-summary/: index.html
blog/1067-weekly-developer-meeting-summary/: index.html
blog/1074-weekly-dev-meeting-progressing-towards-network-stability/: index.html
blog/1081-weekly-dev-meeting-network-integration-testing-and-squashing-final-bugs/: index.html
blog/1097-weekly-dev-meeting-enhancing-connection-stability-and-finalizing-transport-fixes/: index.html
blog/1127-weekly-dev-meeting-gateway-deployment-freenet-chat/: index.html
blog/456-mitigating-sybil-attacks-in-freenet/: index.html
blog/799-proof-of-trust-a-wealth-unbiased-consensus-mechanism-for-distributed-systems/: index.html
blog/882-zero-knowledge-proofs-and-anonymous-reputation-in-freenet/: index.html
blog/900-weekly-developer-meeting-updating-state-and-performance-optimizations/: index.html
categories/: feed.xml  index.html  index.xml
common/src/: crypto.rs
community/: feed.xml  index.html  index.xml
community/get-involved/: index.html
community/support/: index.html
content/: .prettierrc  _index.md  contact.md  home.md  index.md
content/about/: index.md
content/blog/: 1030-weekly-developer-meeting-summary.md  1035-weekly-developer-meeting-summary.md  1048-weekly-developer-meeting-summary.md  1067-weekly-developer-meeting-summary.md  1074-weekly-dev-meeting-progressing-towards-network-stability.md  1081-weekly-dev-meeting-network-integration-testing-and-squashing-final-bugs.md  1097-weekly-dev-meeting-enhancing-connection-stability-and-finalizing-transport-fixes.md  1127-weekly-dev-meeting-gateway-deployment-freenet-chat.md  456-mitigating-sybil-attacks-in-freenet.md  799-proof-of-trust-a-wealth-unbiased-consensus-mechanism-for-distributed-systems.md  882-zero-knowledge-proofs-and-anonymous-reputation-in-freenet.md  900-weekly-developer-meeting-updating-state-and-performance-optimizations.md  index.md
content/community/: get-involved.md
content/dev/: index.md
content/donate/: index.md
content/faq/: can-anyone-use.md  follow-on-social-media.md  how-does-freenet-work.md  index.md  key-components.md  previous-current-versions.md  project-history.md  status.md  support-development.md  what-is-freenet.md  who-is-behind-freenet.md  why-rearchitected-rebranded.md
content/news/: 1097-weekly-dev-meeting-enhancing-connection-stability-and-finalizing-transport-fixes.md  1127-weekly-dev-meeting-gateway-deployment-freenet-chat.md  456-mitigating-sybil-attacks-in-freenet.md  799-proof-of-trust-a-wealth-unbiased-consensus-mechanism-for-distributed-systems.md  882-zero-knowledge-proofs-and-anonymous-reputation-in-freenet.md  900-weekly-developer-meeting-updating-state-and-performance-optimizations.md  _index.md  building-apps-video-talk.md  how-freenet-works-video-talk.md  ian-interviewed-by-lewis-rossmann.md
content/resources/: video-talks.md
css/: freenet.min.4dde39b1dcee8c61e54e1fd4abe73dba549418977747950975264a0d17389002.css  freenetorg.css
dev/: feed.xml  index.html  index.xml
dev/apps/: index.html  index.xml
dev/core/: index.html  index.xml
developers/development/: index.html
donate/: _index.md  feed.xml  index.html
donate/ghostkey/: _index.md  feed.xml  index.html
faq/: index.html
home/: index.html
hugo-site/: hugo.toml
hugo-site/content/: _index.md  whitepaper.md
hugo-site/static/: install.sh  llms.txt
js/: donation-success.js  main.js
layouts/: index.html
layouts/_default/: single.html  taxonomy.html
layouts/blog/: list.html
layouts/shortcodes/: latest-news.html  merged-pull-requests.html
main/: AGENTS.md  LICENSE.md  test_cli_commands.sh
main/rust/api/: Cargo.toml
news/: feed.xml  index.html  index.xml
notes/: certified-donations.md
resources/: feed.xml  index.html  index.xml
rocket-api/: Cargo.toml
rocket-api/src/: fn_key_util.rs  lib.rs  main.rs  routes.rs  stripe_handler.rs
rocket-api/tests/: integration_test.rs  stripe_handler_tests.rs
rust/: Cargo.toml
rust/api/: Cargo.toml  README.md  test_cli_commands.sh
rust/api/src/: delegates.rs  errors.rs  handle_sign_cert.rs  invite.rs  main.rs  rate_limit.rs  routes.rs  stripe_handler.rs
rust/cli/: Cargo.toml  README.md  generate_delegate_keys.sh  generate_notary_keys.sh  test_cli_commands.sh  test_ghostkey.sh
rust/cli/src/: armorable.rs  commands.rs  crypto.rs  delegate_certificate.rs  errors.rs  ghostkey_certificate.rs  key_util.rs  lib.rs  main.rs  master.rs  util.rs  wrappers.rs
rust/cli/src/crypto/: armorable_wrappers.rs  crypto_error.rs  generate_delegate.rs  ghost_key.rs  master_key.rs  sign_with_key.rs  signature.rs
rust/cli/src/util/: blind.rs
rust/cli/src/wrappers/: signature.rs  signing_key.rs  verifying_key.rs
rust/gklib/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust/gklib/src/: armorable.rs  delegate_certificate.rs  errors.rs  ghost_key_certificate.rs  ghostkey_certificate.rs  lib.rs  notary_certificate.rs  signed_message.rs  util.rs
rust/gklib/tests/: legacy_v1_compat.rs
rust/gklib/tests/fixtures/legacy_v1/: delegate_certificate.pem  ghost_key_certificate.pem  master_verifying_key.pem
rust/gkwasm/: Cargo.toml
rust/gkwasm/src/: lib.rs
rust/integration_test/: Cargo.toml
rust/integration_test/src/: browser_test.rs  cli.rs  environment.rs  main.rs  services.rs
scripts/: rewrite-paths.py
tags/: feed.xml  index.html  index.xml
templates/: base.html  blog_index.html  index.html  page.html
(+472 files in other folders)
