[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full", "macros"] }
fantoccini = "0.19"
reqwest = { version = "0.11", features = ["blocking"] }
clap = "3.0"
anyhow = "1.0"
base64 = "0.21"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
