[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full", "macros"] }
fantoccini = "0.19"
reqwest = { version = "0.11", features = ["blocking"] }
clap = "3.0"
anyhow = "1.0"
base64 = "0.21"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[package]
name = "freenet-ghostkey"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "rust/gklib",
    "rust/cli",
    "rust/api",
    "rust/gkwasm",
    "rust/integration_test"
]

[package.metadata.cargo-make]
# Default task
default-task = "dev"

[tasks.dev]
description = "Build and run in development mode"
dependencies = [
    "build-wasm-dev",
    "generate-delegate-keys",
    "test-ghostkey",
    "build-hugo-dev"
]

[tasks.release]
description = "Build and run in release mode"
dependencies = [
    "build-wasm-release",
    "generate-delegate-keys",
    "test-ghostkey",
    "build-hugo-release"
]

[tasks.build-wasm-dev]
description = "Build WebAssembly in development mode"
script = """
cd rust/gkwasm
wasm-pack build --dev --target web --out-dir ../../hugo-site/static/wasm
"""

[tasks.build-wasm-release]
description = "Build WebAssembly in release mode"
script = """
cd rust/gkwasm
wasm-pack build --release --target web --out-dir ../../hugo-site/static/wasm
"""

[tasks.generate-delegate-keys]
description = "Generate delegate keys"
script = """
./rust/cli/generate_delegate_keys.sh --master-key ./path/to/master_signing_key.pem --delegate-dir ./path/to/delegate/dir
"""

[tasks.test-ghostkey]
description = "Run ghostkey tests"
script = """
./rust/cli/test_ghostkey.sh
"""

[tasks.build-hugo-dev]
description = "Build Hugo site in development mode"
script = """
cd hugo-site
hugo server --disableFastRender
"""

[tasks.build-hugo-release]
description = "Build Hugo site in release mode"
script = """
cd hugo-site
hugo --minify
"""
