[package]
name = "rocket-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stripe = { version = "0.37.1", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
p256 = "0.13.2"
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
base64 = "0.21.0"
rand_core = "0.6.4"
sha2 = "0.10.6"
clap = { version = "3.0", features = ["derive"] }
rand = "0.8"

[[bin]]
name = "fn-key-util"
path = "src/fn_key_util.rs"
