[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stripe = { version = "0.31.0", default-features = false, features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
hex = "0.4.3"
log = "0.4"
env_logger = "0.10"
base64 = "0.21.0"
rand_core = "0.6.4"
sha2 = "0.10.6"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
fantoccini = "0.19"
thiserror = "1.0"

[[bin]]
name = "fn-key-util"
path = "src/fn_key_util.rs"
