[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../cli" }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde_json = "1.0"
rmp-serde = "1.1"
stripe = { version = "0.37.1", package = "async-stripe", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
hex = "0.4.3"
log = "0.4"
env_logger = "0.11.3"
base64 = "0.22.1"
rand_core = "0.6.4"
sha2 = "0.10.6"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
fantoccini = "0.19"
thiserror = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
