[package]
name = "rocket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
#ghostkey = { path = "../cli" }

gklib = { path = "../gklib" }

curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }

rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0"
rmp-serde = "1.1"
stripe = { version = "0.38.0", package = "async-stripe", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
hex = "0.4.3"
log = "0.4"
env_logger = "0.11.3"
base64 = "0.22.1"
rand_core = "0.6.4"
sha2 = "0.10.6"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
fantoccini = "0.21.0"
thiserror = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
# Not sure why this is needed as it should be pulled in by ghostkey dependency
blind-rsa-signatures = "0.15.1"
