[package]
name = "ghostkey"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = "0.13.2"
base64 = "0.22.1"
rand_core = "0.6"
clap = "4.5.8"
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
colored = "2.0"
log = "0.4.20"
tempfile = "3.3.0"
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10"
env_logger = "0.11.3"
rand = "0.8.5"
serde_cbor = "0.11.2"
typenum = "1.17.0"
blake3 = "1.5.3"

[[bin]]
name = "ghostkey"
path = "src/bin/ghostkey.rs"

[lib]
name = "ghostkey"
path = "src/lib.rs"
