[package]
name = "ghostkey"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["file_io", "clap", "colored"]
file_io = []
wasm = []

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"]}
base64 = "0.22.1"
rand_core = "0.6"
clap = { version = "4.5.8", optional = true }
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
colored = { version = "2.0", optional = true }
log = "0.4.20"
tempfile = { version = "3.3.0", optional = true }
env_logger = { version = "0.11.3", optional = true }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10"
rand = "0.8.5"
serde_cbor = "0.11.2"
typenum = "1.17.0"
sha3 = "0.11.0-pre.3"
signature = "2.2.0"
blind-rsa-signatures = "0.15.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = { version = "3.3.0", optional = true }
env_logger = { version = "0.11.3", optional = true }
