[package]
name = "ghostkey"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for Freenet Ghost Key operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/freenet/freenet-core"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"]}
base64 = "0.22.1"
rand_core = "0.6"
clap = "4.5.8"
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
colored = "2.0"
log = "0.4.20"
tempfile = "3.3.0"
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10"
env_logger = "0.11.3"
rand = "0.8.5"
serde_cbor = "0.11.2"
typenum = "1.17.0"
sha3 = "0.11.0-pre.3"
signature = "2.2.0"
blind-rsa-signatures = "0.15.1"
ghostkey-lib = "0.1.0"

[[bin]]
name = "ghostkey"
path = "src/bin/ghostkey.rs"

[lib]
name = "ghostkey"
path = "src/lib.rs"
