[package]
name = "ghostkey_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"]}
base64 = "0.22.1"
ciborium = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
blind-rsa-signatures = "0.15.1"
rand = "0.8.5"
rand_core = "0.6"
