[package]
name = "gkwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
ghostkey = { path = "../cli" }
js-sys = "0.3.69"
blind-rsa-signatures = "0.15.1"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
default = ["wasm-support"]
wasm-support = []
