[package]
name = "gkwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
blind-rsa-signatures = "0.15.1"
getrandom = { version = "0.2.15", features = ["js"] }
ciborium = "0.2.2"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
