[package]
name = "gkwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
blind-rsa-signatures = "0.15.1"
getrandom = { version = "0.2.15", features = ["js"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rand = "0.8.5"
ciborium = "0.2.2"
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"]}
ghostkey_lib = "0.1.2"
rand_chacha = "0.3.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
