[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostkey_lib = "0.1.0"

tokio = { version = "1.28", features = ["full", "macros"] }
fantoccini = "0.21.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
clap = "4.5.13"
anyhow = "1.0"
base64 = "0.22.1"
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"]}
colored = "2.1.0"
