[package]
name = "ghostkey-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ghostkey_lib = "0.1.3"

curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }

axum = { version = "0.7.5", features = ["json"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
serde_json = "1.0"
rmp-serde = "1.1"
stripe = { version = "0.38.0", package = "async-stripe", features = ["runtime-tokio-hyper"] }
dotenv = "0.15.0"
hex = "0.4.3"
log = "0.4"
env_logger = "0.11.3"
base64 = "0.22.1"
rand_core = "0.6.4"
sha2 = "0.10.6"
clap = { version = "4.3", features = ["derive", "env"] }
rand = "0.8"
fantoccini = "0.21.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
blind-rsa-signatures = "0.15.1"
ciborium = "0.2"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3"
